--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{include = "shutter_api"}]
 python = "^3.8"
 flask = "^2.2.3"
 flask-mysql = "^1.5.2"
+flask-cors = "^3.0.10"
 
 [tool.poetry.scripts]
 serve = "shutter_api.main:start"
