--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.8"
 flask = "^2.2.3"
 flask-mysql = "^1.5.2"
 flask-cors = "^3.0.10"
+flask-jwt-extended = "^4.4.4"
 
 [tool.poetry.scripts]
 serve = "shutter_api.main:start"
