--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ flask = "^2.2.3"
 flask-mysql = "^1.5.2"
 flask-cors = "^3.0.10"
 flask-jwt-extended = "^4.4.4"
+imagekitio = "^3.0.1"
 
 [tool.poetry.scripts]
 serve = "shutter_api.main:start"
