--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ flask-mysql = "^1.5.2"
 flask-cors = "^3.0.10"
 flask-jwt-extended = "^4.4.4"
 imagekitio = "^3.0.1"
+pycryptodome = "^3.17"
 
 [tool.poetry.scripts]
 serve = "shutter_api.main:start"
